--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-/node_modules
+# Ignore node_modules folder
+node_modules/
 
-message.txt
+# Other files to ignore
+.DS_Store
+.env
+dist/
 
-/node_modules/.package-lock.json
+message.text
